apps/base/media/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName transmission-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/London
            - name: PUID
              value: "1001"
            - name: PGID
              value: "100"
            - name: TRANSMISSION_HOME
              value: /config/transmission-home
            - name: GLOBAL_APPLY_PERMISSIONS
              value: "false"
          image: haugene/transmission-openvpn:latest@sha256:18e5789dfd8aa9c95506d8bf2e4ef88ccd5e4c6102fb75b43f488cb5d5e4dcc5
          imagePullPolicy: IfNotPresent
          name: transmission
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
            privileged: false
            readOnlyRootFilesystem: false
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: transmission
            - mountPath: /data
              name: downloads-volume
              subPath: jellyfin/downloads
      hostname: transmission
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: downloads-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: /mnt/mopower/swarm-data
