apps/base/media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
spec:
  selector:
    app: transmission-deployment
  ports:
  - name: http
    port: 9091
    targetPort: 9091
    protocol: TCP
