apps/base/media/transmission/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.local.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-forward-auth
          namespace: network-system
      services:
        - name: transmission-service
          port: 9091
  tls:
    certResolver: letsencrypt
